#--------------------------------------------------------------------------
# ChangeLog file for package Detector
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V01-00-81
2020-06-23 Mikhail S. Dubrovin
- epix10ka_offset_calibration - new period-independent charge-injection fit and ped_L formulae from Gabriel
	modified:   ../app/epix10ka_offset_calibration
	new file:   ../examples/test_load_npz.py
	modified:   UtilsEpix10kaCalib.py

### Not tagged yet
2020-06-18 Mikhail S. Dubrovin
- work on epix10ka_offset_calibration. Pulser period-independent fit is done.
  TODO: - apply charge injection fit results to pedestal calibration,
	- code polishing
	modified:   ../app/epix10ka_offset_calibration
	modified:   ../examples/ex_epix10ka2m_test_calibcycles.py
	modified:   UtilsEpix10kaCalib.py

### Not tagged yet
2020-06-10 Mikhail S. Dubrovin
  - add plot for charge injection raw intensity vs event to clarify problem with fit
	modified:   app/epix10ka_offset_calibration
	modified:   examples/ex_epix10ka2m_test_calibcycles.py
	modified:   src/UtilsEpix10kaCalib.py

Tag: V01-00-80
2020-06-08 Mikhail S. Dubrovin
- speed-up common mode correction algorithms common_mode_rows, common_mode_cols
modified:   examples/ex_epix10ka2m_test_calibcycles.py
modified:   examples/ex_epix10ka_cmod.py
modified:   src/UtilsCommonMode.py
modified:   src/UtilsEpix10ka.py

Tag: V01-00-79
2020-06-03 Mikhail S. Dubrovin
- add -R option and diagnostics (plot) to app/epix10ka_offset_calibration
- add ../examples/ex_epix10ka*
- add common-mode correction to epix10ka, det.calib(evt, cmpars=(7,2,100))
- pass raw data as external parameter, det.calib(evt, nda_raw=raw)
	modified:   ../app/epix10ka_offset_calibration
	new file:   ../examples/ex_epix10ka2m_test_calibcycles.py
	new file:   ../examples/ex_epix10ka_cmod.py
	modified:   AreaDetector.py